# nsn

./: LICENSE  README.md  pyproject.toml
cli/: nsn_adapt.py  nsn_infer.py  nsn_train.py
examples/: hf_causal_lm_rank_sweep.py  hf_seqcls_demo.py
nsn/: __init__.py  checkpoint.py  config.py  flops.py  gguf_integration.py  hf_integration.py  init.py  layers.py  logging_utils.py  loss.py  rank_sampling.py  utils.py  wrap.py
tests/: test_flops_estimator.py  test_layers.py  test_rank_interp.py  test_svd_init.py  test_uncertainty_loss.py  test_wrap_restore.py
